--- a/mydebug/src/main/res/values-en/strings.xml
+++ b/mydebug/src/main/res/values-en/strings.xml
@@ -8,13 +8,14 @@
     <string name="mydebug_app_info">App Info</string>
     <string name="mydebug_screen_shot">Screenshot</string>
     <string name="mydebug_force_crash">Force crash</string>
-    <string name="mydebug_show_grid">Show grid(UI)</string>
-    <string name="mydebug_show_bounds">Show bounds(UI)</string>
-    <string name="mydebug_environment_h5">Web page addr</string>
+    <string name="mydebug_show_grid">Show grids</string>
+    <string name="mydebug_show_bounds">Show bounds</string>
+    <string name="mydebug_environment_h5">Switch h5 address</string>
     <string name="mydebug_environment_api">Api addr</string>
     <string name="mydebug_device_info">Device information</string>
     <string name="mydebug_device_manufacturer">Manufacturer</string>
     <string name="mydebug_device_model">Model</string>
     <string name="mydebug_device_resolution">Screen</string>
     <string name="mydebug_device_android_sdk">Android Version</string>
+    <string name="mydebug_set_success">"Set success, restart take affect "</string>
 </resources>
